fix layout; add icons; and implement icons to app;

--- a/UnfSwuber/Base.lproj/Main.storyboard
+++ b/UnfSwuber/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,16 +18,21 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="webview">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CWI-4Q-jjS">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CWI-4Q-jjS">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="CWI-4Q-jjS" secondAttribute="bottom" id="F6m-e5-6mB"/>
+                            <constraint firstItem="CWI-4Q-jjS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QgH-M0-fgm"/>
+                            <constraint firstItem="CWI-4Q-jjS" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="TYI-6W-70f"/>
+                            <constraint firstAttribute="trailing" secondItem="CWI-4Q-jjS" secondAttribute="trailing" id="jdO-cZ-x3j"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="webView" destination="CWI-4Q-jjS" id="f1n-Gw-D5u"/>
@@ -35,7 +40,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="85.599999999999994" y="138.98050974512745"/>
+            <point key="canvasLocation" x="85.507246376811594" y="138.58695652173915"/>
         </scene>
     </scenes>
 </document>
